[package]
name = "one337x"
version = "0.1.0"
edition = "2021"


[dependencies]
colored = "2.0.4"
futures = "0.3.29"
scraper = "0.18.1"
reqwest = "0.11.22"
ego-tree = "0.6.2"
tokio = { version="1.34.0", features=["full"]}
strum = { version = "0.25", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
opener = "0.6.1"


[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
